@@ -18,7 +18,6 @@ package org.apache.sis.filter;
 
 import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import org.apache.sis.util.ArgumentChecks;
 import org.apache.sis.internal.util.CollectionsExt;
@@ -247,7 +246,7 @@ abstract class LogicalFilter<R> extends FilterNode<R> implements LogicalOperator
 
         /** Returns the singleton filter used by this operation. */
         @Override public List<Filter<? super R>> getOperands() {
-            return Collections.singletonList(operand);
+            return List.of(operand);
         }
 
         /** Evaluates this filter on the given object. */
