@@ -17,7 +17,6 @@
 package org.apache.sis.internal.filter.sqlmm;
 
 import java.util.List;
-import java.util.Collections;
 import org.apache.sis.internal.feature.Geometries;
 import org.apache.sis.internal.feature.GeometryWrapper;
 
@@ -49,6 +48,7 @@ class OneGeometry<R,G> extends SpatialFunction<R> {
     /**
      * The expression giving the geometry.
      */
+    @SuppressWarnings("serial")         // Not statically typed as Serializable.
     final Expression<? super R, GeometryWrapper<G>> geometry;
 
     /**
@@ -81,7 +81,7 @@ class OneGeometry<R,G> extends SpatialFunction<R> {
      */
     @Override
     public List<Expression<? super R, ?>> getParameters() {
-        return Collections.singletonList(unwrap(geometry));
+        return List.of(unwrap(geometry));
     }
 
     /**
