@@ -273,7 +273,7 @@ final class TransformingReader extends Transformer implements XMLEventReader {
                 if (namespaces != null) {
                     if (localNS != null) {
                         if (namespaces.isEmpty()) {
-                            namespaces = Collections.singletonList(localNS);
+                            namespaces = List.of(localNS);
                         } else {
                             namespaces.add(localNS);
                         }
@@ -318,6 +318,7 @@ final class TransformingReader extends Transformer implements XMLEventReader {
                 return NAMESPACES;
             }
         }
+        // Do not use `Map.of()` because we need to accept `Map.get(null)`.
         return Collections.emptyMap();
     }
 
@@ -386,7 +387,7 @@ final class TransformingReader extends Transformer implements XMLEventReader {
             final String oldURI, final String newURI, boolean changed)
     {
         if (!namespaces.hasNext()) {
-            return changed ? Collections.emptyList() : null;
+            return changed ? List.of() : null;
         }
         final List<Namespace> modified = new ArrayList<>();
         do {
