@@ -17,7 +17,6 @@
 package org.apache.sis.internal.map.coverage;
 
 import java.util.List;
-import java.util.Collections;
 import java.awt.image.RenderedImage;
 import org.opengis.geometry.DirectPosition;
 import org.opengis.referencing.datum.PixelInCell;
@@ -127,8 +126,8 @@ public final strictfp class MultiResolutionCoverageLoaderTest extends TestCase {
 
         /** Returns a dummy value (will not be used by this test). */
         @Override public GridCoverage read(final GridGeometry domain, final int... ranges) {
-            final SampleDimension band = new SampleDimension(Names.createLocalName(null, null, "dummy"), null, Collections.emptyList());
-            return new GridCoverage(domain, Collections.singletonList(band)) {
+            final SampleDimension band = new SampleDimension(Names.createLocalName(null, null, "dummy"), null, List.of());
+            return new GridCoverage(domain, List.of(band)) {
                 @Override public RenderedImage render(GridExtent sliceExtent) {
                     throw new UnsupportedOperationException();                      // Not needed by this test.
                 }
