@@ -23,7 +23,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Locale;
 import java.util.Date;
 import java.text.DateFormat;
@@ -857,7 +856,7 @@ public class Formatter implements Localized {
                 if (filterID) {
                     for (final Identifier id : identifiers) {
                         if (Citations.identifierMatches(authority, id.getAuthority())) {
-                            identifiers = Collections.singleton(id);
+                            identifiers = Set.of(id);
                             break;
                         }
                     }
@@ -1761,7 +1760,7 @@ public class Formatter implements Localized {
      */
     private Warnings warnings() {
         if (warnings == null) {
-            warnings = new Warnings(errorLocale, false, Collections.emptyMap());
+            warnings = new Warnings(errorLocale, false, Map.of());
         }
         return warnings;
     }
